--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,15 @@ spring.mvc.view.suffix=.ftl
 
 spring.freemarker.cache=false
 spring.freemarker.request-context-attribute=request
+
+#redis配置
+spring.redis.database=0
+spring.redis.host=www.lfdevelopment.cn
+spring.redis.password=123
+spring.redis.timeout=1000
+spring.redis.port=6379
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+
