--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -90,3 +90,21 @@ spring.redis.pool.max-wait=-1
 
 
 
+#以session为条件的登录判断
+spring.shiro.session=false
+#踢出之前登录的/之后登录的用户 默认踢出之前登录的用户，即false
+spring.shiro.session.kicOutAfter=false
+#同一账号允许登录的最大会话数量，默认为1
+spring.shiro.session.maxSession=1
+
+
+#以ip为条件的登录判断，此处需要注意，session的优先级高于ip
+#即当配置了spring.shiro.session=true，下面的配置会失效
+spring.shiro.ip=true
+#踢出之前登录的/之后登录的用户 默认踢出之前登录的用户，即false
+spring.shiro.ip.kicOutAfter=false
+#同一账号允许登录的最大ip数量，默认为1
+spring.shiro.ip.maxSession=1
+
+
+
