--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
             <version>${shiro.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
