--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.10-FINAL</version>
+        </dependency>
         <!--开启此项配置则将是使用log4j作为日志-->
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
