--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,10 @@ spring.datasource.maxActive=250
 spring.datasource.maxWait=60000
 
 # \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
-spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.timeBetweenEvictionRunsMillis=600000
 
 # \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
-spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.minEvictableIdleTimeMillis=1800000
 
 spring.datasource.validationQuery=SELECT 'x'
 
@@ -39,7 +39,7 @@ spring.datasource.validationQuery=SELECT 'x'
 spring.datasource.testWhileIdle=true
 
 #\u7533\u8BF7\u8FDE\u63A5\u65F6\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\uFF0C\u505A\u4E86\u8FD9\u4E2A\u914D\u7F6E\u4F1A\u964D\u4F4E\u6027\u80FD\u3002
-spring.datasource.testOnBorrow=false
+spring.datasource.testOnBorrow=true
 
 #\u5F52\u8FD8\u8FDE\u63A5\u65F6\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\uFF0C\u505A\u4E86\u8FD9\u4E2A\u914D\u7F6E\u4F1A\u964D\u4F4E\u6027\u80FD
 spring.datasource.testOnReturn=false
