--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -69,7 +69,7 @@ server.session.timeout=1200
 
 #logging.level.org.springframework.web = DEBUG
 logging.level.cn.lfdevelopment.www=debug
-logging.file=/var/logs/my.log
+#logging.file=/var/logs/my.log
 
 #spring.mvc.view.prefix=/templates/
 #spring.mvc.view.suffix=.html
@@ -81,7 +81,7 @@ spring.freemarker.cache=true
 spring.freemarker.request-context-attribute=request
 
 #redis\u914D\u7F6E
-spring.redis.host=www.lfdevelopment.cn
+spring.redis.host=localhost
 spring.redis.password=123
 spring.redis.timeout=1000
 spring.redis.port=6379
