remove repeat singleChoice

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -112,3 +112,5 @@ spring.shiro.ip.maxSession=1
 
 server.tomcat.uri-encoding=UTF-8
 
+#UEditor\u56FE\u7247\u4E0A\u4F20\u8DEF\u5F84
+ueditor.fileupload.image-path=D:/var/fileUpload/UEditor/image/
