--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -115,3 +115,6 @@ server.tomcat.uri-encoding=UTF-8
 #UEditor\u56FE\u7247\u4E0A\u4F20\u8DEF\u5F84
 ueditor.fileupload.image-path=D:/var/fileUpload/UEditor/image/
 
+#\u6279\u91CF\u4E0A\u4F20\u6A21\u677F\u6587\u4EF6\u5B58\u653E\u4F4D\u7F6E
+pcse.fileupload.template-path=D:/var/fileUpload/choice/template/
+
