upload and download

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -117,3 +117,6 @@ ueditor.fileupload.image-path=D:/var/fileUpload/UEditor/image/
 
 #\u6279\u91CF\u4E0A\u4F20\u6A21\u677F\u6587\u4EF6\u5B58\u653E\u4F4D\u7F6E
 pcse.fileupload.template-path=D:/var/fileUpload/choice/template/
+
+#\u6279\u91CF\u4E0B\u8F7DWord\u6587\u4EF6\u5B58\u653E\u4F4D\u7F6E
+pcse.filedownload.path=D:/var/fileDownload/choice/template/
