--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,11 @@
             <artifactId>activiti-spring-boot-starter-jpa</artifactId>
             <version>${activiti.version}</version>
         </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
