add websocket to system and add resource to static (socket.js , stomp.js) and change config for shiro

--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,7 @@
             <version>${activiti.version}</version>
         </dependency>-->
 
+        <!--websocket配置-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
