--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,21 @@
     <artifactId>greatapp</artifactId>
     <version>v1.0</version>
     <url>www.lfdevelopment.cn</url>
+    <inceptionYear>2016</inceptionYear>
     <!--此处注意：如果项目需要放到web容器运行的话，那么此处需要打成相应的war包-->
     <packaging>war</packaging>
 
     <name>greatapp</name>
     <description>A great application will be bron</description>
+
+
+    <developers>
+        <developer>
+            <id>LiuFa</id>
+            <name>LiuFa</name>
+            <email>liufa@lfdevelopment.cn</email>
+        </developer>
+    </developers>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
