add my website index page

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,9 @@
 
 spring.output.ansi.enabled=always
 
-
+#spring.boot.admin.url=http://localhost:80
+spring.jackson.serialization.indent_output=true
+endpoints.health.sensitive=false
 
 #mybatis\u914D\u7F6E
 #mybatis.mapper-locations=classpath*:cn/lfdevelopment/www/app/**/xml/*Mapper.xml
