--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,9 @@
 
 spring.output.ansi.enabled=never
 
+#spring.boot.admin.url=http://localhost:80
+spring.jackson.serialization.indent_output=true
+endpoints.health.sensitive=false
 
 
 #mybatis\u914D\u7F6E
