--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -83,8 +83,8 @@ spring.freemarker.cache=false
 spring.freemarker.request-context-attribute=request
 
 #redis\u914D\u7F6E
-spring.redis.host=www.lfdevelopment.cn
-spring.redis.password=123
+spring.redis.host=
+spring.redis.password=
 spring.redis.timeout=1000
 spring.redis.port=6379
 spring.redis.pool.max-idle=8
